--- a/templates/order_form.html
+++ b/templates/order_form.html
@@ -48,13 +48,16 @@
         {% for item in items %}
           {% if item.kind == "sandwich" %}
             <tr value={{item.miid}}>
+             
             <td id="b" class="name">{{item.name}}</td>
             <td id="b2" class="price">{{item.price}}</td>
             <td>
+              <label>Add
               <input class ="checkboxBigger"  type="checkbox" id="cb" value={{item.miid}}></input>
+              </label>
             </td>
             <td>
-              <button class ="customize" type="button" id="customMenu" onclick="openNav(this.value)" value={{item.miid}}> Customize
+              <button class ="customize" type="button" id="customMenu" onclick="openNav(this.value)" value={{item.miid}}>Customize
               </button></td>
             </tr>
 
@@ -63,7 +66,9 @@
             <td class="name">{{item.name}}</td>
             <td class="price">{{item.price}}</td>
             <td>
+              <label>Add
               <input class ="checkboxBigger" type="checkbox" id="cb" value={{item.miid}}></input>
+              </label>
             </td>  
             </tr>
           {% elif item.kind == "candy" %}
@@ -71,22 +76,29 @@
             <td class="name">{{item.name}}</td>
             <td class="price">{{item.price}}</td>
             <td>
+              <label>Add
               <input class ="checkboxBigger"  type="checkbox" id="cb" value={{item.miid}}></input>
+              </label>
             </td>
             </tr>
           {% elif item.kind == "snack" %}
             <tr miid={{item.miid}}>
             <td class="name">{{item.name}}</td>
             <td class="price">{{item.price}}</td>
-            <td><form action="{{url_for('cart')}}" method="GET">
+            <td>
+              <label>Add
               <input class ="checkboxBigger"  type="checkbox" id="cb" value="{{item.miid}}"></input>
+              </label>
             </td>
             </tr>
           {% endif %}
         {% endfor %}
         </table>
        <br>
+       <label>
       Total Price: <input type="text" name="subtotal" value="0" />
+      </label>
+      
       <br><button type="submit">Checkout!</button>
       </form>
     </div>
