adding remove_staff_page, doesn't work perfectly yet!

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@ input::placeholder{
           <li id="lmbar"><a href="{{url_for('order', username=session['username'])}}">Menu</a></li>
           <li id="lmbar"><a href="{{url_for('tabs')}}">User Tabs</a></li>
           <li id="lmbar"><a href="{{url_for('add_staff')}}">Add Staff Member</a></li>
+          <li id="lmbar"><a href="{{url_for('remove_staff')}}">Remove Staff Member</a></li>
           <li id="lmbar"><a href="{{url_for('inventory')}}">Inventory</a></li>
           </label>
           
