--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -12,7 +12,7 @@
     <p><label for="ingredient">Select an ingredient:</label>
         <select id="ingredient" name="ingredient">
             <option value="" disabled selected>Ingredient name</option>
-            {% for item in ingredients %}
+            {% for item in ingredients if item['kind'] != 'base' %}
                 <option value={{item['iid']}}>{{item['name']}}</option>
             {% endfor %}
         </select>
@@ -26,19 +26,20 @@
 <div id="ingredients-list">
     <h2>Current quantities</h2>
     {% for category in kinds %}
-    <div id={{category['kind']}}>
         <h3>{{category['kind']}}</h2>
+        <table id="{{category['kind']}}">
         {% for item in ingredients %}
             {% if item['kind'] == category['kind'] %}
-                <div id={{item['iid']}}>
-                    <p>{{item['name']}}...............{{item['quantity']}}</p>
-                </div>
+                <tr id={{item['iid']}}>
+                    <td>{{item['name']}}</td>
+                    <td id="{{item['iid']}}_quantity">{{item['quantity']}}</td>
+                </tr>
             {% endif %}
         {% endfor %}
-    </div>
-    
+        </table>
+        
     {% endfor %}
-    
+        
 </div>
 
 <script>
@@ -64,13 +65,19 @@
         if(ingred.error){
             $("<p>")
                 .text('Error: '+ingred.err)
-                .prependTo("#errors")
+                .prependTo("#errors");
         }else{
             $("<p style = color:red>")
                 .text("New " + ingred.name + " quantity: " + ingred.quantity)
                 .prependTo("#newInventoryInfo");
-            $("#"+ingred.ingred_id)
-                .html("<p style = color:red>" + ingred.name + "..............." + ingred.quantity + "</p>");
+            /*$("#"+ingred.ingred_id)
+                .empty();*/
+            /*$("#"+ingred.ingred_id)
+                .html("<tr> <td style = color:red;>" + ingred.name + "</td><td style=color:red;>" + ingred.quantity + "</td><tr>");*/
+            $("td#" + ingred['ingred_id'] +"_quantity")
+                .text(ingred['quantity']);
+            $("tr#"+ingred['ingred_id'])
+                .css('color','red');
         }
     }
     
