remove staff page now works

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,7 @@ input::placeholder{
   {% block head %}
     <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
+    <title>Tab Tracker</title>
     </head>
   {% endblock %}
     <body>
